@@ -1,3 +1,9 @@
+2003-07-17 Jackson Harper <jackson@latitudegeo.com>
+
+	* GenericTypeRef.cs:  New File - A reference to a generic type
+	spec. ie !0 or !1
+	* InstrTable.cs: Add the stelem and ldelem opcodes.
+	
 2003-07-15 Jackson Harper <jackson@latitudegeo.com>
 
 	* TypeDef.cs: Allow adding and emitting generic type constraints.
